# Nativo

./: .docker-compose.tmp.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AddDocument.css  AddWord.tsx  CLAUDE.md  DEPLOYMENT.md  DICTIONARY_IMPLEMENTATION.md  Dockerfile  DocumentList.css  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  STRUCTURE.md  Sidebar.tsx  WordList.css  WordList.tsx  _populate_db.py  app.py  auth.py  bavarian_standard.md  bavarian_vocabulary.md  client.db  client.py  config.json  config.py  docker-compose.dev.yml  documentService.ts  documents.py  fly.toml  localization.py  main.py  nativo-hero-v2.html  nativo.kv  password-reset-mockup-v1.html  password-reset-mockup-v2.html  password-reset-mockup-v3.html  password-reset-mockup-v4.html  (+8 more)
.claude/: launch.json  settings.json
app/: __init__.py  chat_history.py  config.py  git.py  git_commit.py  git_config.py  git_push.py  models.py  prompts.py  startup.py  tasks.py  utils.py
backend/: .env.example  ADMIN_GUIDE.md  AUTH_GUIDE.md  MODELS_SUMMARY.md  QUICK_START.md  TYPED_RELATIONSHIPS_GUIDE.md  alembic.ini  create_admin.py  seed_dev_postgres_db.py  test_imports.py
db/: __init__.py  db.py  local.py  models.py  schemas.py
dbs/: README.md
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
layouts/: AppLayout.css
models/: _base.py  phrase.py  user.py  word.py
pages/: auth.kv  auth.py  docedit.kv  docedit.py  document.kv  (+5 more)
(+665 files in other folders)
